python/testData/inspections/pyLazyImportInspection/starImport.py
<error descr="Lazy imports cannot be 'from ... import *'">lazy</error> from os.path import *
